# decodethebot

./: .gitignore  episode_ext.py  index.rst  pyproject.toml  soups.py  test_eps_bot.py  test_eps_bot1.py
docs/source/: conf.py  dtg_bot.rst  index.rst
dtb_htmx/: guru_config.py  p1.py
dtb_htmx/templates/: episode_detail.html  episode_search.html  main.html  nav.html
leg/: dtg_styles.py
leg/routers/: eps.py  guroute.py  main.py  red.py
reqs/: guru.exampleenv  reddit.exampleenv  reqs.txt  reqs_am.txt  reqs_local.txt  reqsmaybe.txt  requirements.txt
src/DecodeTheBot/: app.py  app_old.py  app_old2.py  bot_tasks.py  dtg.py  dtg_bot.py  dtg_bot1.py  dtg_types.py  guru_config.py  reddit_managers.py  tasks.py
src/DecodeTheBot/core/: .env.example  consts.py  database.py  json_map.py  logger_funcs.py  types.py
src/DecodeTheBot/dtb_htmx/: episode_route.py  guru_config.py  guru_route.py  p2.py
src/DecodeTheBot/dtb_htmx/static/: styles.css
src/DecodeTheBot/dtb_htmx/templates/: episode_cards.html  episode_rows.html  guru_detail.html
src/DecodeTheBot/models/: episode.py  episode_ext.py  episode_m.py  episode_model.py  episodedb.py  guru.py  guru_m.py  links.py  reddit_ext.py  reddit_m.py  reddit_thread.py  reddit_thread_model.py  responses.py
src/DecodeTheBot/routers/: auth.py  eps.py  forms.py  guroute.py  main.py  red.py  smth.py
src/DecodeTheBot/ui/: css.py  dtg_ui.py  mixin.py  shared.py
src/DecodeTheBot/ui/static/: ep_styles.css  guru_styles.css  style.css  styles.css
src/DecodeTheBot/ui/templates/: main_test.html  nav.html  pr.html
src/DecodeTheBot/ui/templates/episode/: episode_cards.html  episode_detail.html  episode_index.html
src/DecodeTheBot/ui/templates/guru/: guru_cards.html  guru_detail.html  guru_index.html
src/decodethebot/models/: episode_ext.py  guru.py  links.py  reddit_ext.py
tests/: conftest.py  test_24.py  test_eps_bot.py  test_matching.py  test_reddit.py
