[project]
name = "DecodeTheBot"
version = "0.1.0"
description = "Decoding The Guru Podcast companion"
authors = [
    { name = "pawrequest", email = "paw@pawrequest.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    'asyncpraw',
    'sqlmodel',
    "uvicorn[standard]",
    'fastapi',
    'pydantic',
    'python-dotenv',
    "aiohttp",
    "loguru",
    "fastui",
    "scrapaw",
    "suppawt",
]
[project.optional-dependencies]
git = [
    "scraper @ git+https://github.com/pawrequest/scraper",
    "suppawt @ git+https://github.com/pawrequest/suppawt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio",
    "httpx",
    'autodoc_pydantic',
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
    "myst-parser",

]

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"


[tool.hatch.metadata]
allow-direct-references = true

